--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,13 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Streamlit secrets
+.streamlit/secrets.toml
+
+# App specific
+scripts.json
+versions_*.json
+data/
+.streamlit/secrets.toml.example
+.cursorignore
